--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt') // 'proguard-rules.pro'
         }
     }
 
@@ -41,18 +41,13 @@ ext {
 
     support = '28.0.0-rc01'
     prefs = '1.1.2.0'
-    log = '1.0.0'
+    log = '1.1.1'
     dialog = '2.0.0-alpha05'
     alerter = '2.0.6'
     glide = '4.8.0'
-    snacky = '1.0.3'
     assent = '1.0.1'
     youtube = '8.0.1'
     toasty = '1.3.0'
-
-    junit = '4.12'
-    runner = '1.0.2'
-    espresso = '3.0.2'
 }
 
 dependencies {
@@ -77,13 +72,10 @@ dependencies {
     implementation "com.github.AndreaCioccarelli:LogKit:$log"
 
     implementation "com.afollestad.material-dialogs:core:$dialog"
+    implementation "com.afollestad.material-dialogs:input:$dialog"
     implementation "com.tapadoo.android:alerter:$alerter"
     implementation "com.github.bumptech.glide:glide:$glide"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtube"
     implementation "com.github.GrenderG:Toasty:$toasty"
-
-    testImplementation "junit:junit:$junit"
-    androidTestImplementation "com.android.support.test:runner:$runner"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso"
 }
