Light code cleanup, removed useless images to decrease app size, updated dialogs library to alpha6, made icon round by default

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:label="Music Downloader"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
