--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.0.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode 4
+        versionName "1.1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -39,10 +39,10 @@ ext {
     gson = '2.8.5'
     okhttp = '3.11.0'
 
-    support = '28.0.0-rc02'
+    support = '28.0.0'
     prefs = '1.2.0.0'
     log = '1.1.1'
-    dialog = '2.0.0-alpha09'
+    dialog = '2.0.0-beta2'
     alerter = '2.0.6'
     glide = '4.8.0'
     assent = '2.0.0'
@@ -58,11 +58,11 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
-    implementation "com.android.support:appcompat-v7:$support"
-    implementation "com.android.support:support-v13:$support"
-    implementation "com.android.support:cardview-v7:$support"
-    implementation "com.android.support:design:$support"
-    implementation "com.android.support:animated-vector-drawable:$support"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
 
     implementation "com.google.code.gson:gson:$gson"
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
