--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.2.70'
-    ext.anko_version = '0.10.6'
+    ext.kotlin_version = '1.2.71'
+    ext.anko_version = '0.10.7'
 
     repositories {
         google()
@@ -9,7 +9,7 @@ buildscript {
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
