--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ ext {
     support = '28.0.0'
     prefs = '1.3.1.0'
     log = '1.1.1'
-    dialog = '2.0.0-beta5'
+    dialog = '2.0.0-rc2'
     alerter = '3.0.2'
     glide = '4.8.0'
     assent = '2.2.0'
@@ -78,4 +78,6 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glide"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtube"
     implementation "com.github.GrenderG:Toasty:$toasty"
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
 }
