--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 6
-        versionName "1.1.2"
+        versionCode 7
+        versionName "1.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -41,17 +41,18 @@ android {
 
 ext {
     gson = '2.8.5'
-    okhttp = '3.11.0'
-
+    okhttp = '3.12.0'
+    coroutines = '1.1.0'
     support = '28.0.0'
     prefs = '1.3.1.0'
     log = '1.1.1'
-    dialog = '2.0.0-rc2'
-    alerter = '3.0.2'
+    dialog = '2.0.0-rc7'
+    alerter = '4.0.0'
     glide = '4.8.0'
-    assent = '2.2.0'
+    assent = '2.2.2'
     youtube = '9.0.0'
-    toasty = '1.3.0'
+    toasty = '1.3.1'
+    debugDb = '1.0.4'
 }
 
 dependencies {
@@ -60,8 +61,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-sdk21:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
@@ -79,10 +79,11 @@ dependencies {
     implementation "com.afollestad.material-dialogs:core:$dialog"
     implementation "com.afollestad.material-dialogs:input:$dialog"
     implementation "com.tapadoo.android:alerter:$alerter"
-    implementation "com.github.bumptech.glide:glide:$glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtube"
     implementation "com.github.GrenderG:Toasty:$toasty"
 
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+    implementation "com.github.bumptech.glide:glide:$glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+
+    debugImplementation "com.amitshekhar.android:debug-db:$debugDb"
 }
