--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,16 +10,23 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 8
-        versionName "1.2.1"
+        versionCode 9
+        versionName "1.3.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
+    }
+
+
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 
     packagingOptions {
@@ -32,27 +39,12 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/library_release.kotlin_module'
+        exclude 'META-INF/core_release.kotlin_module'
     }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
-}
-
-ext {
-    gson = '2.8.5'
-    okhttp = '3.12.0'
-    coroutines = '1.1.0'
-    support = '28.0.0'
-    prefs = '1.3.1.1'
-    log = '1.1.1'
-    dialog = '2.0.0-rc7'
-    alerter = '4.0.0'
-    glide = '4.8.0'
-    assent = '2.2.2'
-    youtube = '9.0.0'
-    toasty = '1.3.1'
-    debugDb = '1.0.4'
 }
 
 dependencies {
@@ -61,7 +53,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-sdk21:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
@@ -69,21 +61,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
 
-    implementation "com.google.code.gson:gson:$gson"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp"
-    implementation "com.afollestad:assent:$assent"
+    implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.squareup.okhttp3:okhttp:3.13.1"
+    implementation "com.afollestad:assent:2.2.3"
 
-    implementation "com.github.AndreaCioccarelli:CryptoPrefs:$prefs"
-    implementation "com.github.AndreaCioccarelli:LogKit:$log"
+    implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.0"
+    implementation "com.github.AndreaCioccarelli:LogKit:1.1.1"
 
-    implementation "com.afollestad.material-dialogs:core:$dialog"
-    implementation "com.afollestad.material-dialogs:input:$dialog"
-    implementation "com.tapadoo.android:alerter:$alerter"
-    implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtube"
-    implementation "com.github.GrenderG:Toasty:$toasty"
+    implementation "com.afollestad.material-dialogs:core:2.0.3"
+    implementation "com.afollestad.material-dialogs:input:2.0.3"
+    implementation "com.tapadoo.android:alerter:4.0.1"
+    implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.1"
+    implementation "com.github.GrenderG:Toasty:1.4.0"
 
-    implementation "com.github.bumptech.glide:glide:$glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
-
-    debugImplementation "com.amitshekhar.android:debug-db:$debugDb"
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.9.0"
 }
