--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion 28
@@ -50,30 +51,38 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-sdk21:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 
+    // AndroidX
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
+    implementation "androidx.room:room-runtime:2.1.0-alpha04"
+    implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+    kapt "androidx.room:room-compiler:2.1.0-alpha04"
 
+
+    // Networking
     implementation "com.google.code.gson:gson:2.8.5"
     implementation "com.squareup.okhttp3:okhttp:3.13.1"
-    implementation "com.afollestad:assent:2.2.3"
 
+    // Libraries
+    implementation "com.afollestad:assent:2.2.3"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.0"
     implementation "com.github.AndreaCioccarelli:LogKit:1.1.1"
-
     implementation "com.afollestad.material-dialogs:core:2.0.3"
     implementation "com.afollestad.material-dialogs:input:2.0.3"
     implementation "com.tapadoo.android:alerter:4.0.1"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.1"
     implementation "com.github.GrenderG:Toasty:1.4.0"
 
+    // Images
     implementation "com.github.bumptech.glide:glide:4.9.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.9.0"
 }
