Added google product font built-in, internal restructuring and package hierarchy refactoring
Signed-off-by: Andrea Cioccarelli <cioccarelliandrea01@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation "com.tapadoo.android:alerter:4.0.1"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.1"
     implementation "com.github.GrenderG:Toasty:1.4.0"
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     // Images
     implementation "com.github.bumptech.glide:glide:4.9.0"
