--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.1"
     implementation "com.github.GrenderG:Toasty:1.4.0"
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
 
     // Images
     implementation "com.github.bumptech.glide:glide:4.9.0"
