--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 17
-        versionName "1.3.7"
+        versionCode 18
+        versionName "1.3.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -24,7 +24,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
-
 
     compileOptions {
         targetCompatibility = "8"
@@ -42,6 +41,7 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/library_release.kotlin_module'
         exclude 'META-INF/core_release.kotlin_module'
+        exclude 'META-INF/atomicfu.kotlin_module'
     }
 
     sourceSets {
@@ -56,7 +56,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-sdk21:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0"
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -70,14 +70,14 @@ dependencies {
 
     // Networking
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation "com.squareup.okhttp3:okhttp:3.13.1"
+    implementation "com.squareup.okhttp3:okhttp:3.14.1"
 
     // Libraries
     implementation "com.afollestad:assent:2.2.3"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.4"
     implementation "com.github.AndreaCioccarelli:LogKit:1.2.0"
-    implementation "com.afollestad.material-dialogs:core:2.0.3"
-    implementation "com.afollestad.material-dialogs:input:2.0.3"
+    implementation "com.afollestad.material-dialogs:core:2.8.1"
+    implementation "com.afollestad.material-dialogs:input:2.8.1"
     implementation "com.tapadoo.android:alerter:4.0.2"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3"
     implementation "com.github.GrenderG:Toasty:1.4.1"
