--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
-    implementation "androidx.room:room-runtime:2.1.0-alpha07"
-    kapt "androidx.room:room-compiler:2.1.0-alpha07"
+    implementation "androidx.room:room-runtime:2.1.0-beta01"
+    kapt "androidx.room:room-compiler:2.1.0-beta01"
 
     // Networking
     implementation "com.google.code.gson:gson:2.8.5"
