--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 18
-        versionName "1.3.8"
+        versionCode 19
+        versionName "1.3.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -75,9 +75,10 @@ dependencies {
     implementation "com.afollestad:assent:2.2.3"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5"
     implementation "com.github.AndreaCioccarelli:LogKit:1.2.0"
-    implementation "com.afollestad.material-dialogs:core:2.8.1"
-    implementation "com.afollestad.material-dialogs:input:2.8.1"
-    implementation "com.tapadoo.android:alerter:4.0.2"
+    implementation "com.afollestad.material-dialogs:core:3.0.0-beta2"
+    implementation "com.afollestad.material-dialogs:input:3.0.0-beta2"
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-beta2'
+    implementation "com.tapadoo.android:alerter:4.0.3"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3"
     implementation "com.github.GrenderG:Toasty:1.4.1"
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
