--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 19
-        versionName "1.3.9"
+        versionCode 20
+        versionName "1.3.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -64,8 +64,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
-    implementation "androidx.room:room-runtime:2.1.0-beta01"
-    kapt "androidx.room:room-compiler:2.1.0-beta01"
+    implementation "androidx.room:room-runtime:2.1.0-rc01"
+    kapt "androidx.room:room-compiler:2.1.0-rc01"
 
     // Networking
     implementation "com.google.code.gson:gson:2.8.5"
@@ -75,9 +75,9 @@ dependencies {
     implementation "com.afollestad:assent:2.2.3"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5"
     implementation "com.github.AndreaCioccarelli:LogKit:1.2.0"
-    implementation "com.afollestad.material-dialogs:core:3.0.0-beta2"
-    implementation "com.afollestad.material-dialogs:input:3.0.0-beta2"
-    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-beta2'
+    implementation "com.afollestad.material-dialogs:core:3.0.0-rc2"
+    implementation "com.afollestad.material-dialogs:input:3.0.0-rc2"
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-rc2'
     implementation "com.tapadoo.android:alerter:4.0.3"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3"
     implementation "com.github.GrenderG:Toasty:1.4.1"
