--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 20
-        versionName "1.3.10"
+        versionCode 21
+        versionName "1.3.11"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -56,7 +56,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-sdk21:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2"
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -64,20 +64,20 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
-    implementation "androidx.room:room-runtime:2.1.0-rc01"
-    kapt "androidx.room:room-compiler:2.1.0-rc01"
+    implementation "androidx.room:room-runtime:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
 
     // Networking
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation "com.squareup.okhttp3:okhttp:3.14.1"
+    implementation "com.squareup.okhttp3:okhttp:3.14.2"
 
     // Libraries
     implementation "com.afollestad:assent:2.2.3"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5"
     implementation "com.github.AndreaCioccarelli:LogKit:1.2.0"
-    implementation "com.afollestad.material-dialogs:core:3.0.0-rc2"
-    implementation "com.afollestad.material-dialogs:input:3.0.0-rc2"
-    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-rc2'
+    implementation "com.afollestad.material-dialogs:core:3.0.0-rc4"
+    implementation "com.afollestad.material-dialogs:input:3.0.0-rc4"
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-rc4'
     implementation "com.tapadoo.android:alerter:4.0.3"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3"
     implementation "com.github.GrenderG:Toasty:1.4.1"
@@ -86,5 +86,5 @@ dependencies {
 
     // Images
     implementation "com.github.bumptech.glide:glide:4.9.0"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.9.0"
 }
