--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.andreacioccarelli.musicdownloader"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 21
-        versionName "1.3.11"
+        versionCode 22
+        versionName "1.3.12"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -65,22 +65,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
     implementation "androidx.room:room-runtime:2.1.0"
+    implementation "androidx.room:room-ktx:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
 
     // Networking
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation "com.squareup.okhttp3:okhttp:3.14.2"
+    implementation "com.squareup.okhttp3:okhttp:4.0.1"
 
     // Libraries
-    implementation "com.afollestad:assent:2.2.3"
+    implementation "com.afollestad:assent:2.3.1"
     implementation "com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5"
     implementation "com.github.AndreaCioccarelli:LogKit:1.2.0"
-    implementation "com.afollestad.material-dialogs:core:3.0.0-rc4"
-    implementation "com.afollestad.material-dialogs:input:3.0.0-rc4"
-    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-rc4'
+    implementation "com.afollestad.material-dialogs:core:3.1.0"
+    implementation "com.afollestad.material-dialogs:input:3.1.0"
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.0'
     implementation "com.tapadoo.android:alerter:4.0.3"
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3"
-    implementation "com.github.GrenderG:Toasty:1.4.1"
+    implementation "com.github.GrenderG:Toasty:1.4.2"
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
 
